# rust-inline-assembly-examples

./: Cargo.toml  README.md  rust-toolchain.toml
src/: arm.rs  main.rs  x86_64.rs
