[package]
name = "llvm-inline-assembly-demo"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# [target.'cfg(target_arch = "x86_64")'.dependencies]
# perhaps not needed, maybe nice for testing
# x86 = "0.39.0"
# x86_64 = "0.14.3"

